--- a/BreakableEcology/Pages/BirdDetails.razor
+++ b/BreakableEcology/Pages/BirdDetails.razor
@@ -1,5 +1,23 @@
-﻿@page "/birds/bird"
+﻿@page "/catalog/mixes/bird"
+
+<PageTitle>Домовый воробей</PageTitle>
+
+<Container>
+    <Breadcrumb Path="@breadcrumbs" />
+</Container>
+
+<div class="object-container">
+    <DetailSection Item="AppData.BirdDetails" />
+
+    <Section Is4Section=true Title="С этим товаром смотрят" Items="AppData.ProductTheyLook" />
+
+    <Section Is4Section=true Title="С этим товаром покупают" Items="AppData.ProductTheyBuy" />
+</div>
 
 @code {
-
+    private List<LinkModel> breadcrumbs = new List<LinkModel>() {
+        new() { Url = "/catalog", Text = "Каталог" },
+        new() { Url = "/catalog/mixes", Text = "Готовые миксы" },
+        new() { Url = "/catalog/mixes/mix", Text = "Домовый воробей"}
+    };
 }
