--- a/BreakableEcology/Sections/DetailSection.razor.css
+++ b/BreakableEcology/Sections/DetailSection.razor.css
@@ -1,4 +1,69 @@
-﻿.details__radio {
+﻿.details {
+    display: grid;
+    grid-template-areas:
+        'image text'
+        'image info';
+    grid-row-gap: 6em;
+    grid-column-gap: 4em;
+    grid-template-columns: 44.32% 1fr;
+}
+
+.details__image {
+    grid-area: image;
+    padding-bottom: 100%;
+    position: relative;
+    background: #fff;
+    border-radius: 10px;
+}
+
+    .details__image img {
+        border-radius: 10px;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+    }
+
+.details__content {
+    grid-area: text;
+    display: flex;
+    flex-direction: column;
+    row-gap: 1.5em;
+}
+
+.details__title {
+    margin: 0;
+    font-size: 3.6em;
+    font-weight: 700;
+    color: #333333;
+}
+
+    .details__title:focus {
+        outline: none;
+    }
+
+.details__description {
+    font-size: 1.6em;
+    color: #4F4F4F;
+    display: flex;
+    flex-direction: column;
+    row-gap: 0.5em;
+}
+
+.details__product {
+    grid-area: info;
+    /*align-self: end;*/
+    display: grid;
+    grid-row-gap: 2.5em;
+}
+
+.details__text {
+    margin: 0;
+}
+
+.details__radio {
     display: flex;
     row-gap: 0.5em;
 }
@@ -13,12 +78,159 @@
     white-space: nowrap;
 }
 
+    .details__weight-label.checked {
+        outline: 1px solid #3ECF5E;
+    }
+
     .details__weight-label ::deep input {
         position: absolute;
         opacity: 0;
         visibility: hidden;
     }
 
-    .details__weight-label.checked {
-        outline: 1px solid #3ECF5E;
+.details__price {
+    font-size: 3.6em;
+    color: #333;
+    font-weight: 600;
+}
+
+.details__controls {
+    display: flex;
+    column-gap: 1.5em;
+}
+
+.details__link, .details__btn {
+    padding: 0.6666666em;
+    font-size: 1.8em;
+    font-weight: 600;
+    line-height: 1.2;
+    box-sizing: border-box;
+    border-radius: 5px;
+    transition: .4s ease;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.details__link {
+    text-decoration: none;
+    background-color: #3FCF5E;
+    min-width: 6.77777777em;
+    color: #fff;
+    border: 1px solid rgba(110, 230, 144, 0.53);
+}
+
+    .details__link:hover {
+        background-color: #fff;
+        color: rgb(110, 230, 144);
     }
+
+.details__btn {
+    border: 1px solid rgba(110, 230, 144, 0.53);
+    background-color: #fff;
+    color: #3fcf5e;
+    font-family: 'Gilroy', sans-serif;
+}
+
+    .details__btn:hover {
+        color: #fff;
+        background-color: #3fcf5e;
+        cursor: pointer;
+    }
+
+/*.slides {
+    padding: 5em 0;
+}*/
+
+    .slides ::deep .container {
+        display: flex;
+        column-gap: 2em;
+        row-gap: 2em;
+        justify-content: center;
+    }
+
+    .slides ::deep .carousel {
+        flex: 1 1 50%;
+    }
+
+@media only screen and (max-width: 103.125em) {
+    .slides ::deep .container {
+        flex-wrap: wrap;
+        /*max-width: 50%*/
+    }
+}
+
+@media only screen and (max-width: 48em) {
+    .details {
+        grid-row-gap: 4em;
+        grid-column-gap: 2em;
+        grid-template-columns: 45% 1fr;
+        grid-template-areas:
+            'image text'
+            'info info';
+    }
+
+    .details__product {
+        grid-template-areas:
+            'price quantity'
+            'weights controls';
+        grid-column-gap: 6em;
+        align-items: center;
+    }
+
+        .details__product ::deep form {
+            grid-area: weights;
+        }
+
+    .details__price {
+        grid-area: price;
+    }
+
+    .details__product ::deep .quantity {
+        grid-area: quantity;
+    }
+
+    .details__controls {
+        grid-area: controls;
+    }
+}
+
+@media only screen and (max-width: 40.9375em) {
+    .details__product {
+        grid-template-areas: unset;
+        grid-template-columns: 1fr;
+        justify-items: center;
+    }
+
+        .details__product ::deep form {
+            grid-area: unset;
+        }
+
+    .details__price {
+        grid-area: unset;
+    }
+
+    .details__product ::deep .quantity {
+        grid-area: unset;
+    }
+
+    .details__controls {
+        grid-area: unset;
+    }
+
+    .details__controls {
+        flex-wrap: wrap;
+        row-gap: 2em;
+        justify-content: center;
+    }
+}
+
+@media only screen and (max-width: 31.25em) {
+    .details {
+        grid-template-areas:
+            'image'
+            'text'
+            'info';
+        grid-template-columns: unset;
+    }
+}
