--- a/BreakableEcology/Components/Header.razor
+++ b/BreakableEcology/Components/Header.razor
@@ -6,7 +6,7 @@
         <Burger OnClick="ToggleHeaderState" @ref=burger />
         <Account />
         <Search />
-        <Menu />
+        <Menu DropdownLinkClick="ToggleHeaderState"/>
         <Telephone Theme="ThemeType.Dark" />
     </Container>
 </header>
