--- a/BreakableEcology/Pages/Index.razor
+++ b/BreakableEcology/Pages/Index.razor
@@ -12,4 +12,7 @@
     <Section Title="Зёрна" Href="catalog/grains" Items="AppData.GrainsCards" Is4Section=true ShowMore=true />
 
     <Section Title="Кормушки" Href="/catalog/feeders" Items="AppData.FeedersCards" Is4Section=true ShowMore=true/>
+
+    <DonationSection />
 </div>
+
