--- a/BreakableEcology/_Imports.razor
+++ b/BreakableEcology/_Imports.razor
@@ -12,3 +12,4 @@
 @using BreakableEcology.Shared.Enums
 @using BreakableEcology.Shared.Models
 @using BreakableEcology.Sections
+@using BlazorInputMask
