--- a/BreakableEcology/Components/Account.razor.css
+++ b/BreakableEcology/Components/Account.razor.css
@@ -1,9 +1,11 @@
 ﻿.account {
     display: flex;
     column-gap: 2.5em;
+    position: relative;
+    align-items: center;
 }
 
-.account__cart, .account__profile {
+.account__cart, .account__profile, .account__link {
     width: 2.25em;
     height: 2.25em;
     position: relative;
@@ -13,7 +15,7 @@
     user-select: none;
 }
 
-    .account__cart img, .account__profile img {
+    .account__cart img, .account__profile img, .account__link img {
         position: absolute;
         top: 0;
         left: 0;
@@ -21,6 +23,23 @@
         height: 100%;
     }
 
-    .account__cart:hover, .account__profile:hover {
+    .account__cart:hover, .account__profile:hover, .account__link {
         cursor: pointer;
+    }
+
+    .account__cart > span {
+        padding: 0.15em;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 1.5em;
+        height: 1.5em;
+        background-color: #06d10e;
+        border-radius: 50%;
+        color: #fff;
+        position: absolute;
+        top: -0.75em;
+        right: -0.75em;
+        font-family: 'Montserrat', sans-serif;
+        font-size: 0.9em;
     }
