--- a/BreakableEcology/Components/Footer.razor.css
+++ b/BreakableEcology/Components/Footer.razor.css
@@ -1,28 +1,9 @@
 ﻿.footer {
-}
-
-.footer__top {
-    background-color: #3ecf5e;
-    padding: 2em 0;
-}
-
-    .footer__top ::deep .container {
-        min-height: 35.9em;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-
-.footer ::deep .donation-form {
-}
-
-.footer__bottom {
     background-color: #333;
-    min-height: 19.31818181818182%;
-    padding: 2em 0;
+    padding: 1.5em 0;
 }
 
-    .footer__bottom ::deep .container {
+    .footer ::deep .container {
         min-height: 20em;
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
@@ -58,26 +39,18 @@
         height: 2.5em;
     }
 
-.footer__bottom ::deep .telephone {
-    /*justify-self: end;*/
-}
-
 @media only screen and (max-width: 54.0625em) {
-    .footer__bottom ::deep .container {
+    .footer ::deep .container {
         grid-template-columns: 1fr 1fr;
-    }
-
-    .footer__bottom ::deep .telephone {
-        /*justify-self: center;*/
     }
 }
 
 @media only screen and (max-width: 36.5625em) {
-    .footer__bottom ::deep .container {
+    .footer ::deep .container {
         grid-template-columns: 1fr;
     }
 
-    .footer__bottom ::deep .telephone {
+    .footer ::deep .telephone {
         justify-self: unset;
     }
 
