--- a/BreakableEcology/wwwroot/css/app.css
+++ b/BreakableEcology/wwwroot/css/app.css
@@ -50,32 +50,46 @@ body {
     background: #f9f9f9;
 }
 
-    body::-webkit-scrollbar {
-        width: 0.8em;
-        transition: 1s;
-    }
+#app {
+    display: grid;
+    grid-template-rows: auto 1fr auto;
+    min-height: 100vh;
+}
 
-    body::-webkit-scrollbar-track {
-        background-color: #f9f9f9;
-    }
+body::-webkit-scrollbar {
+    width: 0.8em;
+    transition: 1s;
+}
 
-    body::-webkit-scrollbar-thumb {
-        background-color: seagreen;
-        border-radius: 15px;
-        border: 0.2em solid #f9f9f9;
-    }
+body::-webkit-scrollbar-track {
+    background-color: #f9f9f9;
+    border-radius: 15px;
+}
+
+body::-webkit-scrollbar-thumb {
+    background-color: seagreen;
+    border-radius: 15px;
+    border: 0.2em solid #f9f9f9;
+    min-height: 1em;
+}
 
 .page {
     display: grid;
     grid-row-gap: 7.5em;
 }
 
-.nothing {
-    padding: 2em;
-    font-size: 1.6em;
-    margin: 0;
-    text-align: center;
-}
+    .page > .donation-section {
+        margin-bottom: -7.5em;
+    }
+
+    .page ::deep .container
+
+    .nothing {
+        padding: 2em;
+        font-size: 1.6em;
+        margin: 0;
+        text-align: center;
+    }
 
 .preloader {
     height: 100vh;
@@ -141,6 +155,11 @@ body {
     display: flex;
     flex-direction: column;
     row-gap: 5em;
+}
+
+.nothing {
+    font-size: 1.8em;
+    text-align: center;
 }
 
 @keyframes opacity {
