--- a/BreakableEcology/Components/Footer.razor
+++ b/BreakableEcology/Components/Footer.razor
@@ -1,23 +1,23 @@
 ﻿<footer class="footer">
-        <Container>
-            <div class="footer__links">
-                <a href="/" class="footer__link">Оплата</a>
-                <a href="/" class="footer__link">Доставка</a>
-            </div>
-            <div class="footer__socials">
-                <Tooltip Text="В контакте">
-                    <a href="https://vk.com" target="_blank">
-                        <img src="images/icons/social/vk.svg" alt="ВК" />
-                    </a>
-                </Tooltip>
-                <Tooltip Text="Инстаграм">
-                    <a href="https://instagram.com" target="_blank">
-                        <img src="images/icons/social/instagram.svg" alt="Инстаграм" />
-                    </a>
-                </Tooltip>
-            </div>
-            <Telephone Theme="ThemeType.Light" />
-        </Container>
+    <Container>
+        <div class="footer__links">
+            <a href="/" class="footer__link">Оплата</a>
+            <a href="/delivery" class="footer__link">Доставка</a>
+        </div>
+        <div class="footer__socials">
+            <Tooltip Text="В контакте">
+                <a href="https://vk.com" target="_blank">
+                    <img src="images/icons/social/vk.svg" alt="ВК" />
+                </a>
+            </Tooltip>
+            <Tooltip Text="Инстаграм">
+                <a href="https://instagram.com" target="_blank">
+                    <img src="images/icons/social/instagram.svg" alt="Инстаграм" />
+                </a>
+            </Tooltip>
+        </div>
+        <Telephone Theme="ThemeType.Light" />1
+    </Container>
 </footer>
 
 @code {
