--- a/BreakableEcology/Components/Breadcrumb.razor
+++ b/BreakableEcology/Components/Breadcrumb.razor
@@ -1,18 +1,20 @@
 ﻿<div class="breadcrumb">
-    <div class="breadcrumb__links">
-        @for (int i = 0; i < Path.Count; i++)
-        {
-            @if (i == (Path.Count - 1))
+    @if (Path is not null){
+        <div class="breadcrumb__links">
+            @for (int i = 0; i < Path.Count; i++)
             {
-                <a href="@Path[i].Url" class="breadcrumb__link current" @onclick:preventDefault>@Path[i].Text</a>
+                @if (i == (Path.Count - 1))
+                {
+                    <a href="@Path[i].Url" class="breadcrumb__link current" @onclick:preventDefault>@Path[i].Text</a>
+                }
+                else
+                {
+                    <a href="@Path[i].Url" class="breadcrumb__link">@Path[i].Text</a>
+                    <span class="breadcrumb__dot"></span>
+                }
             }
-            else
-            {
-                <a href="@Path[i].Url" class="breadcrumb__link">@Path[i].Text</a>
-                <span class="breadcrumb__dot"></span>
-            }
-        }
-    </div>
+        </div>
+    }
     <div class="breadcrumb__back">
         <img src="images/icons/back.svg" alt="Назад" />
         <a href="@backUrl">Назад</a>
@@ -20,12 +22,17 @@
 </div>
 
 @code {
-    private string backUrl;
+    private string? backUrl;
+
     [Parameter]
-    public List<LinkModel> Path { get; set; }
+    public List<LinkModel>? Path { get; set; }
 
     protected override void OnInitialized()
     {
-        backUrl = Path[Path.Count - 2].Url;
+        if (Path is not null && Path.Count >= 2){
+            backUrl = Path[Path.Count - 2].Url;
+        } else{
+            backUrl = "/";
+        }
     }
 }
