--- a/BreakableEcology/Components/Footer.razor
+++ b/BreakableEcology/Components/Footer.razor
@@ -1,7 +1,7 @@
 ﻿<footer class="footer">
     <Container>
         <div class="footer__links">
-            <a href="/" class="footer__link">Оплата</a>
+            <a href="/delivery" class="footer__link">Оплата</a>
             <a href="/delivery" class="footer__link">Доставка</a>
         </div>
         <div class="footer__socials">
@@ -16,7 +16,7 @@
                 </a>
             </Tooltip>
         </div>
-        <Telephone Theme="ThemeType.Light" />1
+        <Telephone Theme="ThemeType.Light" />
     </Container>
 </footer>
 
