--- a/BreakableEcology/Components/Orders.razor
+++ b/BreakableEcology/Components/Orders.razor
@@ -37,6 +37,13 @@
                 
             </tr>
         }
+        @if(Cart){
+            <tr>
+                <td colspan="3" class="button-pay">
+                    <button type="button" aria-label="Оплатить">Оплатить</button>
+                </td>
+            </tr>
+        }
     }
 </table>
 
