--- a/BreakableEcology/Pages/AccountPage.razor.css
+++ b/BreakableEcology/Pages/AccountPage.razor.css
@@ -9,6 +9,7 @@
         color: #bdbdbd;
         font-weight: 500;
         margin: 0;
+        padding: 0 1em;
     }
 
 .orders-section, .profile-section {
