--- a/BreakableEcology/Components/Modal.razor.css
+++ b/BreakableEcology/Components/Modal.razor.css
@@ -2,6 +2,8 @@
     padding: 0;
     border-radius: 10px;
     border: none;
+    transform: scale(0);
+    transition: 1s ease-in-out;
 }
 
     .dialog::backdrop {
@@ -53,3 +55,7 @@
         background-color: #3ecf5e;
         color: #fff;
     }
+
+.dialog[open] {
+    transform: scale(1);
+}
