--- a/BreakableEcology/Components/Orders.razor.css
+++ b/BreakableEcology/Components/Orders.razor.css
@@ -73,6 +73,7 @@
     row-gap: 0.8em;
     align-items: center;
     user-select: none;
+    min-width: 14em;
 }
 
     .product__status span {
@@ -82,7 +83,7 @@
 
     .product__status p {
         color: #fff;
-        padding: 1.0714em 2.142888em;
+        /*padding: 1.0714em 2.142888em;*/
         border-radius: 10px;
     }
 
@@ -90,12 +91,45 @@
         background-color: #3ecf5e;
     }
 
+    .product__status .sent, .product__status .cancelled {
+        padding: 1em;
+        min-width: 7em;
+        text-align: center;
+    }
+
     .product__status .cancelled {
         background-color: #4f4f4f;
     }
 
-@media only screen and (max-width: 31.25em) {
-    .product {
+.button-pay{
+    padding: 4em 2.5em;
+    display: flex;
+    justify-content: end;
+}
+
+    .button-pay button {
+        padding: 0.5em 1em;
+        font-size: 1.6em;
+        font-family: 'Gilroy', sans-serif;
+        background-color: #3ecf5e;
+        color: #fff;
+        border: none;
+        transition: .4s ease;
+        border-radius: 10px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        min-height: 3.12499999em;
+        min-width: 10em;
+    }
+
+        .button-pay button:hover {
+            cursor: pointer;
+            background-color: seagreen;
+        }
+
+        @media only screen and (max-width: 31.25em) {
+            .product {
         flex-direction: column;
         align-items: center;
         row-gap: 2em;
