--- a/BreakableEcology/wwwroot/css/app.css
+++ b/BreakableEcology/wwwroot/css/app.css
@@ -48,6 +48,8 @@ body {
     font-size: 62.5%;
     font-family: 'Gilroy', sans-serif;
     background: #f9f9f9;
+    width: 100%;
+    box-sizing: border-box;
 }
 
 #app {
