--- a/BreakableEcology/Components/Burger.razor
+++ b/BreakableEcology/Components/Burger.razor
@@ -2,7 +2,7 @@
 
 <button class=@((Active) ? "burger active" : "burger")
         @onclick="OnClick"
-        type="button" aria-label="Меню">
+        type="button" aria-label="Меню" id="burger">
     <span></span>
     <span></span>
     <span></span>
