--- a/BreakableEcology/App.razor
+++ b/BreakableEcology/App.razor
@@ -6,7 +6,7 @@
         </Found>
         <NotFound>
             <PageTitle>Не найдено</PageTitle>
-            <LayoutView Layout="@typeof(MainLayout)">
+            <LayoutView Layout="typeof(NotFoundLayout)">
                 <p role="alert" class="nothing">Извините, по этому адресу ничего нет.</p>
             </LayoutView>
         </NotFound>
