--- a/BreakableEcology/Components/DonationForm.razor.css
+++ b/BreakableEcology/Components/DonationForm.razor.css
@@ -115,7 +115,12 @@
     background: #fff;
     cursor: pointer;
     font-size: 1.8em;
-    font-family: 'Gilroy';
+    font-family: '
+        
+        
+        
+        
+        ';
     font-weight: 600;
     transition: .4s ease;
     border-radius: 10px;
