--- a/BreakableEcology/Pages/About.razor
+++ b/BreakableEcology/Pages/About.razor
@@ -1,5 +1,7 @@
 ﻿@page "/about"
 
+<PageTitle>О нашем фонде</PageTitle>
+
 <section class="about">
     <Container>
         <h1 class="about__title">О нашем фонде</h1>
