--- a/BreakableEcology/Pages/IngredientDetails.razor
+++ b/BreakableEcology/Pages/IngredientDetails.razor
@@ -1,6 +1,6 @@
 ﻿@page "/catalog/mixes/ingredient"
 
-<PageTitle>Домовый воробей</PageTitle>
+<PageTitle>Ингредиент</PageTitle>
 
 <Container>
     <Breadcrumb Path="@breadcrumbs" />
