--- a/BreakableEcology/Pages/ProductDetails.razor
+++ b/BreakableEcology/Pages/ProductDetails.razor
@@ -1,6 +1,6 @@
 ﻿@page "/catalog/mixes/mix"
 
-<PageTitle>Padovan Ovomix Gold Rosso</PageTitle>
+<PageTitle>Продукт</PageTitle>
 
 <Container>
     <Breadcrumb Path="@breadcrumbs" />
