--- a/BreakableEcology/wwwroot/css/app.css
+++ b/BreakableEcology/wwwroot/css/app.css
@@ -21,7 +21,7 @@
 
 @font-face {
     font-family: 'Gilroy';
-    src: local('Gilroy Semibold'), url('../fonts/Gilroy-SemiBold.woff2') format('woff2'), url('../fonts/Gilroy-SemiBold.woff') format('woff'), url('../fonts/Gilroy-SemiBold.ttf') format('ttf');
+    src: local('Gilroy Semibold'), url('../fonts/Gilroy-Semibold.woff2') format('woff2'), url('../fonts/Gilroy-Semibold.woff') format('woff'), url('../fonts/Gilroy-SemiBold.ttf') format('ttf');
     font-weight: 600;
     font-style: normal;
     font-display: swap;
